ACLOCAL_AMFLAGS		= -I m4

GENERAL_SUBDIRS		= examples libfetch libmj libnabud \
			  nabud nabuclient nabuctl

ALL_EXTRAS_SUBDIRS	= extras/darwin/launchd \
			  extras/freebsd/rc.conf.d extras/freebsd/rc.d \
			  extras/linux/systemd \
			  extras/netbsd/rc.conf.d extras/netbsd/rc.d \
			  extras/openbsd/rc.d

SUBDIRS			= $(GENERAL_SUBDIRS) $(EXTRAS_SUBDIRS)
DIST_SUBDIRS		= $(GENERAL_SUBDIRS) $(ALL_EXTRAS_SUBDIRS)
